--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@ alert(str)
     <ul class="nav navbar-nav">
       <li class="active"><a href="index.html">Home</a></li>
       <li><a href="pizza.php">pizzas</a></li>
-      <li><a href="#">location</a></li>
+      <li><a href="location.html">location</a></li>
       <li><a href="about.html">RSS Feeds</a></li>
 	  <li><a href="register.php">Register</a></li>
 	  <li><a href="order.php">Order Online</a></li>
