--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Pizza Mania</a>
+      <a class="navbar-brand" href="index.html">Arya's Pie</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="index.html">Home</a></li>
+      <li ><a href="index.html">Home</a></li>
       <li><a href="pizza.php">pizzas</a></li>
       <li><a href="location.html">location</a></li>
       <li><a href="about.html">Rss Feeds</a></li>
@@ -85,24 +85,24 @@
       <div class="item active">
         <img src="1a.jpg" alt="Los Angeles" style="width:100%; height:70%;">
         <div class="carousel-caption">
-          <h3>Los Angeles</h3>
-          <p>LA is always so much fun!</p>
+          <h3>Cheese</h3>
+          <p>You can't say NO!</p>
         </div>
       </div>
 
       <div class="item">
         <img src="2.jpg" alt="Chicago" style="width:100%;height:70%;">
         <div class="carousel-caption">
-          <h3>Chicago</h3>
-          <p>Thank you, Chicago!</p>
+          <h3>Mushroom</h3>
+          <p>It's Good for health</p>
         </div>
       </div>
     
       <div class="item">
         <img src="3.jpg" alt="New York" style="width:100%;height:70%;">
         <div class="carousel-caption">
-          <h3>New York</h3>
-          <p>We love the Big Apple!</p>
+          <h3>Pepperoni</h3>
+          <p>It's Spicy but good</p>
         </div>
       </div>
   
@@ -118,7 +118,32 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+<br>
+  <div class="panel panel-default">
+  <div class="panel-heading">
+	<strong><marquee><p style="font-family: cursive; font-size: 15pt"><i class="fa fa-bolt"></i><i class="fa fa-bolt"></i>  Available Offers Today!! Enjoy your meal  <i class="fa fa-bolt"></i><i class="fa fa-bolt"></i></p></marquee>
+</div>
+</div>
+	<div class="container">
+  
+  <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
+                <img src="o1.jpg" class="img-responsive">
+            </div>
 
+            <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
+                <img src="o2.jpg" class="img-responsive">
+            </div>
+
+            <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
+                <img src="o3.jpg" class="img-responsive">
+            </div>
+  
+  </div>
+  <hr>
+  
+  
+  
+  
 <div class="text-center center-block">
             <br />
                 <a href="https://www.facebook.com/bootsnipp"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
