--- a/location.html
+++ b/location.html
@@ -29,6 +29,14 @@ document.getElementById("demo").innerHTML="";
 		div.innerHTML='<div class="panel panel-info"> <div class="panel-heading"><span class="glyphicon glyphicon-star"> </span><b><strong>  &nbsp' + data.shop[i].name+ '</strong></b><br>'+ data.shop[i].des +'</div><div class="panel-body"><b>ADDRESS  :   </b>'+ data.shop[i].address+'</br><b>HOURS  :  </b>' + data.shop[i].hours +'<br><b>ORDER  :  </b>'+data.shop[i].order+'<br><b>PHONE NO.  :  </b>'+data.shop[i].phone +'</div>';
     	document.getElementById("demo").appendChild(div);
 		}
+		var map=document.createElement('map');
+		
+		map.innerHTML='<br><a href="mashupmum.html">For Map wiew click here</a>';
+		document.getElementById("demo").appendChild(map);
+		
+		
+		
+		
 		
 });
 }
@@ -47,6 +55,10 @@ else if(str=="hyb")
 		div.innerHTML='<div class="panel panel-info"> <div class="panel-heading"><span class="glyphicon glyphicon-star"> </span><b><strong>  &nbsp' + data.shop[i].name+ '</strong></b><br>'+ data.shop[i].des +'</div><div class="panel-body"><b>ADDRESS  :   </b>'+ data.shop[i].address+'</br><b>HOURS  :  </b>' + data.shop[i].hours +'<br><b>ORDER  :  </b>'+data.shop[i].order+'<br><b>PHONE NO.  :  </b>'+data.shop[i].phone +'</div>';
     	document.getElementById("demo").appendChild(div);
 		}
+		var map=document.createElement('map');
+		
+		map.innerHTML='<br><a href="mashuphyb.html">For Map wiew click here</a>';
+		document.getElementById("demo").appendChild(map);
 		
 });
 }
