--- a/location.html
+++ b/location.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Pizza mania</title>
+<title>Brothers Pizza</title>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="http://code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
@@ -37,7 +37,6 @@ document.getElementById("demo").innerHTML="";
 		
 		
 		
-		
 });
 }
 else if(str=="hyb")
@@ -59,6 +58,8 @@ else if(str=="hyb")
 		
 		map.innerHTML='<br><a href="mashuphyb.html">For Map wiew click here</a>';
 		document.getElementById("demo").appendChild(map);
+		
+		
 		
 });
 }
@@ -101,6 +102,38 @@ else if(str=="hyb")
  #social-em:hover {
      color: #f39c12;
  }
+    body {margin: 0;}
+
+ul.topnav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+ul.topnav li {float: left;}
+
+ul.topnav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+ul.topnav li a:hover:not(.active) {background-color: #111;}
+
+ul.topnav li a.active {background-color: #d60000;}
+    
+    ul.topnav li a.main{background-color: #660000}
+    
+ul.topnav li.right {float: right;}
+
+@media screen and (max-width: 600px){
+    ul.topnav li.right, 
+    ul.topnav li {float: none;}
+}
 
 </style>
 
@@ -114,31 +147,26 @@ else if(str=="hyb")
 <!-- HEADER -->
 
 <!-- HEADER -->
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="index.html">Arya's Pie</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li ><a href="index.html">Home</a></li>
-      <li><a href="pizza.php">pizzas</a></li>
-      <li><a href="location.html">location</a></li>
-      <li><a href="about.html">Rss Feeds</a></li>
-	  <li><a href="register.php">Register</a></li>
+<ul class="topnav">
+<li><a style="font-family: Comic Sans MS;font-size: 17px" href="index.html"><b>Brothers Pizza</b></a></li>
+  <li><a  href="index.html">Home</a></li>
+   <li><a href="pizza.php">pizzas</a></li>
+      <li><a class="active" href="location.html">location</a></li>
+      <li><a href="register.php">Register</a></li>
       <li><a href="order.php">Order Online</a></li>
-	</ul>
-  </div>
-</nav>
+  <li class="right"><a href="about.html">About</a></li>
+</ul>
 
 
 
 <div class="container">
 <fieldset>
-<legend><h2 bgcolor="lightred">Find Us</h2></legend>
-Right now we are open in limited places. You can find us in following cities. 
+<legend><h2 bgcolor="lightred"><b>Find Us</b></h2></legend>
+<p style="font-size:20px">Right now we are open in limited places. You can find us in following cities. 
 we have provided with address. Do reach us. We hope to spread accross the nation. Keep eating.
 </p>
 </fieldset>
+    </div>
 <hr>
 <br>
 <br>
@@ -148,10 +176,11 @@ we have provided with address. Do reach us. We hope to spread accross the nation
 <form>
 <div class="form-group">
 <select class="form-control" onchange="showstore(this.value)">
-<option value="">Select the city :</option>
+<option value="">Select the city</option>
 <option value="mumbai">Mumbai</option>
 <option value="hyb">Hyderabad</option>
 </select>
+    </div>
 </form>
 <br>
 <p id="demo">All the stores will be listed here: <br><br></p>
